<resources>
    <string name="app_name">Pokedex</string>
    <array name="Nav_Titles">
        <item>Pokédex</item>
        <item>Power Table</item>
        <item>About</item>
    </array>
    <string name="PokemonList_Banner">ca-app-pub-4305314132412937/9372163002</string>
    <string name="ListView_Ad">ca-app-pub-4305314132412937/3825157007</string>
    <string name="Download_Sprites">Download sprites?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="search_term">Search Term…</string>
    <string name="search_button">Search Button</string>
    <string name="evoltion_chain">Evoltion Chain</string>
    <string name="height">Height</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="open_Pokemon_Data">Open Pokemon Data</string>
    <string name="size_fab">0.7</string>
    <string name="title_activity_pokemon">PokemonActivity</string>
    <string name="Open_Pokemon_Data">Open Pokemon Data</string>

</resources>
