<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/textViewSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Download_Sprites"
        android:lines="1"
        android:layout_weight="93" />

    <Button
        android:background="@android:color/transparent"
        android:textAllCaps="true"
        android:id="@+id/snackbar_action_left"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/Yes"
        android:layout_weight="3.5"
        android:layout_marginRight="5dp" />
    <Button
        android:id="@+id/snackbar_action_right"
        android:background="@android:color/transparent"
        android:textAllCaps="true"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/No"
        android:layout_weight="3.5" />

</LinearLayout>